--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Non persistent Library</title>
+    <title>theLibrary - Local Persistent Library</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
+    <main class="container">
+        <div class="article">
+            <div class="logo">
+                <img src="./assets/thelibrary.svg" alt="">
+                <span><span class="underline">the</span>Library</span>
+            </div>
+            <div class="pill"></div>
+        </div>
+        <h1>Testing Media query - Dark and Light Mode</h1>
+    </main>
 </body>
 
 </html>
