Create empty state

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <span class="text subtle">Means Read</span>
             </div>
         </article>
-        <section class="book">
+        <!-- <section class="book">
             <p class="edition">1st Edition</p>
             <h2 class="title">The University of Ibadan Press Material for 2024</h2>
             <p class="page">763 pages</p>
@@ -71,8 +71,25 @@
             <svg class="icon" width="21" height="32" viewBox="0 0 21 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 0H21V32L11 26.5L0 32V0Z" fill="#272727" />
             </svg>
-        </section>
+        </section> -->
     </main>
+    <section class="empty">
+        <div class="column">
+            <svg class="empty-svg" width="106" height="106" viewBox="0 0 106 106" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <mask id="mask0_225_1563" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="106"
+                    height="106">
+                    <rect width="106" height="106" fill="#D9D9D9" />
+                </mask>
+                <g mask="url(#mask0_225_1563)">
+                    <path
+                        d="M33.1249 97.1671C28.8555 97.1671 25.2117 95.658 22.1936 92.64C19.1756 89.6219 17.6666 85.9782 17.6666 81.7087V24.2921C17.6666 20.0226 19.1756 16.3789 22.1936 13.3608C25.2117 10.3428 28.8555 8.83374 33.1249 8.83374H88.3332V75.0837C86.493 75.0837 84.9287 75.7278 83.6405 77.016C82.3523 78.3042 81.7082 79.8685 81.7082 81.7087C81.7082 83.549 82.3523 85.1133 83.6405 86.4014C84.9287 87.6896 86.493 88.3337 88.3332 88.3337V97.1671H33.1249ZM35.3332 66.2504H44.1666V17.6671H35.3332V66.2504ZM33.1249 88.3337H74.3103C73.8686 87.3032 73.519 86.2542 73.2614 85.1869C73.0037 84.1195 72.8749 82.9601 72.8749 81.7087C72.8749 80.531 72.9853 79.39 73.2061 78.2858C73.427 77.1817 73.795 76.1143 74.3103 75.0837H33.1249C31.211 75.0837 29.6284 75.7278 28.377 77.016C27.1256 78.3042 26.4999 79.8685 26.4999 81.7087C26.4999 83.6226 27.1256 85.2053 28.377 86.4567C29.6284 87.708 31.211 88.3337 33.1249 88.3337Z"
+                        fill="#272727" />
+                </g>
+            </svg>
+            <p>No books in the library yet.</p>
+        </div>
+    </section>
     <button class="btn" id="main-btn">
         <svg class="btn-svg" width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
             <mask id="mask0_225_1396" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="21"
