Add hover state

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
+    <script src="index.js" defer></script>
+    <script src="operation.js" defer></script>
 </head>
 
 <body>
@@ -36,7 +38,7 @@
                 <span class="text subtle">Means Read</span>
             </div>
         </article>
-        <!-- <section class="book">
+        <section class="book">
             <p class="edition">1st Edition</p>
             <h2 class="title">The University of Ibadan Press Material for 2024</h2>
             <p class="page">763 pages</p>
@@ -47,6 +49,22 @@
             <svg class="icon" width="21" height="32" viewBox="0 0 21 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 0H21V32L11 26.5L0 32V0Z" fill="#272727" />
             </svg>
+            <div class="delete">
+                <span class="text">Delete</span>
+                <button class="close">
+                    <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <mask id="mask0_282_1112" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0"
+                            width="25" height="25">
+                            <rect x="0.064209" y="0.0639648" width="24" height="24" fill="#D9D9D9" />
+                        </mask>
+                        <g mask="url(#mask0_282_1112)">
+                            <path
+                                d="M7.06381 21.064C6.51381 21.064 6.04298 20.8682 5.65133 20.4765C5.25967 20.0848 5.06385 19.614 5.06386 19.064L5.06414 6.06399L4.06414 6.06396L4.06419 4.06396L9.06419 4.06407L9.06421 3.06407L15.0642 3.06421L15.0642 4.06421L20.0642 4.06432L20.0641 6.06432L19.0641 6.06429L19.0639 19.0643C19.0638 19.6143 18.868 20.0851 18.4763 20.4768C18.0847 20.8684 17.6138 21.0643 17.0638 21.0643L7.06381 21.064ZM9.0639 17.0641L11.0639 17.0641L11.0641 8.06412L9.0641 8.06407L9.0639 17.0641ZM13.0639 17.0642L15.0639 17.0642L15.0641 8.06421L13.0641 8.06416L13.0639 17.0642Z"
+                                fill="#C8C8C8" />
+                        </g>
+                    </svg>
+                </button>
+            </div>
         </section>
         <section class="book" data-color="blue">
             <p class="edition">1st Edition</p>
@@ -59,6 +77,22 @@
             <svg class="icon" width="21" height="32" viewBox="0 0 21 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 0H21V32L11 26.5L0 32V0Z" fill="#272727" />
             </svg>
+            <div class="delete">
+                <span class="text">Delete</span>
+                <button class="close">
+                    <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <mask id="mask0_282_1112" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0"
+                            width="25" height="25">
+                            <rect x="0.064209" y="0.0639648" width="24" height="24" fill="#D9D9D9" />
+                        </mask>
+                        <g mask="url(#mask0_282_1112)">
+                            <path
+                                d="M7.06381 21.064C6.51381 21.064 6.04298 20.8682 5.65133 20.4765C5.25967 20.0848 5.06385 19.614 5.06386 19.064L5.06414 6.06399L4.06414 6.06396L4.06419 4.06396L9.06419 4.06407L9.06421 3.06407L15.0642 3.06421L15.0642 4.06421L20.0642 4.06432L20.0641 6.06432L19.0641 6.06429L19.0639 19.0643C19.0638 19.6143 18.868 20.0851 18.4763 20.4768C18.0847 20.8684 17.6138 21.0643 17.0638 21.0643L7.06381 21.064ZM9.0639 17.0641L11.0639 17.0641L11.0641 8.06412L9.0641 8.06407L9.0639 17.0641ZM13.0639 17.0642L15.0639 17.0642L15.0641 8.06421L13.0641 8.06416L13.0639 17.0642Z"
+                                fill="#C8C8C8" />
+                        </g>
+                    </svg>
+                </button>
+            </div>
         </section>
         <section class="book" data-color="green" data-read="false">
             <p class="edition">2d Edition</p>
@@ -71,9 +105,25 @@
             <svg class="icon" width="21" height="32" viewBox="0 0 21 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 0H21V32L11 26.5L0 32V0Z" fill="#272727" />
             </svg>
-        </section> -->
+            <div class="delete">
+                <span class="text">Delete</span>
+                <button class="close">
+                    <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <mask id="mask0_282_1112" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0"
+                            width="25" height="25">
+                            <rect x="0.064209" y="0.0639648" width="24" height="24" fill="#D9D9D9" />
+                        </mask>
+                        <g mask="url(#mask0_282_1112)">
+                            <path
+                                d="M7.06381 21.064C6.51381 21.064 6.04298 20.8682 5.65133 20.4765C5.25967 20.0848 5.06385 19.614 5.06386 19.064L5.06414 6.06399L4.06414 6.06396L4.06419 4.06396L9.06419 4.06407L9.06421 3.06407L15.0642 3.06421L15.0642 4.06421L20.0642 4.06432L20.0641 6.06432L19.0641 6.06429L19.0639 19.0643C19.0638 19.6143 18.868 20.0851 18.4763 20.4768C18.0847 20.8684 17.6138 21.0643 17.0638 21.0643L7.06381 21.064ZM9.0639 17.0641L11.0639 17.0641L11.0641 8.06412L9.0641 8.06407L9.0639 17.0641ZM13.0639 17.0642L15.0639 17.0642L15.0641 8.06421L13.0641 8.06416L13.0639 17.0642Z"
+                                fill="#C8C8C8" />
+                        </g>
+                    </svg>
+                </button>
+            </div>
+        </section>
     </main>
-    <section class="empty">
+    <section class="empty" data-visible="false">
         <div class="column">
             <svg class="empty-svg" width="106" height="106" viewBox="0 0 106 106" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -90,6 +140,52 @@
             <p>No books in the library yet.</p>
         </div>
     </section>
+    <dialog id="formDialog">
+        <form class="form column" action="">
+            <div class="bar">
+                <img src="./assets/thelibrary.svg" alt="">
+                <h2>Add New Book</h2>
+                <button class="close">
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <mask id="mask0_229_600" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0"
+                            width="20" height="20">
+                            <rect width="20" height="20" fill="#D9D9D9" />
+                        </mask>
+                        <g mask="url(#mask0_229_600)">
+                            <path
+                                d="M5.33334 16.2105L3.78979 14.6669L8.45646 10.0002L3.78979 5.33358L5.33334 3.79004L10 8.45671L14.6667 3.79004L16.2102 5.33358L11.5435 10.0002L16.2102 14.6669L14.6667 16.2105L10 11.5438L5.33334 16.2105Z"
+                                fill="#828282" />
+                        </g>
+                    </svg>
+                </button>
+            </div>
+            <input type="text" placeholder="Name of your book" name="book_name">
+            <input type="text" placeholder="What's the Book's Author" name="book_author">
+            <input type="number" placeholder="Year the Book was published" name="book_year">
+            <input type="number" placeholder="How many pages" name="book_pages">
+            <input type="text" placeholder="Book's Edition" name="book_edition">
+            <select name="book_read" id="">
+                <option value="" disabled selected>Have you read it</option>
+                <option value="true">True</option>
+                <option value="false">False</option>
+            </select>
+            <button class="btn fixed reversed" id="close-btn">
+                <svg class="btn-svg" width="21" height="20" viewBox="0 0 21 20" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <mask id="mask0_225_1396" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="21"
+                        height="20">
+                        <rect x="0.5" width="20" height="20" fill="#D9D9D9" />
+                    </mask>
+                    <g mask="url(#mask0_225_1396)">
+                        <path
+                            d="M6.74992 18.3334C5.94436 18.3334 5.25686 18.0487 4.68742 17.4792C4.11797 16.9098 3.83325 16.2223 3.83325 15.4167V4.58341C3.83325 3.77786 4.11797 3.09036 4.68742 2.52091C5.25686 1.95147 5.94436 1.66675 6.74992 1.66675H17.1666V14.1667C16.8194 14.1667 16.5242 14.2883 16.2812 14.5313C16.0381 14.7744 15.9166 15.0695 15.9166 15.4167C15.9166 15.764 16.0381 16.0591 16.2812 16.3022C16.5242 16.5452 16.8194 16.6667 17.1666 16.6667V18.3334H6.74992ZM7.16659 12.5001H8.83325V3.33341H7.16659V12.5001ZM6.74992 16.6667H14.5208C14.4374 16.4723 14.3714 16.2744 14.3228 16.073C14.2742 15.8716 14.2499 15.6529 14.2499 15.4167C14.2499 15.1945 14.2708 14.9792 14.3124 14.7709C14.3541 14.5626 14.4235 14.3612 14.5208 14.1667H6.74992C6.38881 14.1667 6.0902 14.2883 5.85409 14.5313C5.61797 14.7744 5.49992 15.0695 5.49992 15.4167C5.49992 15.7779 5.61797 16.0765 5.85409 16.3126C6.0902 16.5487 6.38881 16.6667 6.74992 16.6667Z"
+                            fill="white" />
+                    </g>
+                </svg>
+                <span class="text">Add Book</span>
+            </button>
+        </form>
+    </dialog>
     <button class="btn" id="main-btn">
         <svg class="btn-svg" width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
             <mask id="mask0_225_1396" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="21"
