--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
-    <script src="index.js" defer></script>
-    <script src="operation.js" defer></script>
+    <script src="index.js" type="module" defer></script>
+    <script src="operation.js" type="module" defer></script>
 </head>
 
 <body>
@@ -38,7 +38,7 @@
                 <span class="text subtle">Means Read</span>
             </div>
         </article>
-        <section class="book">
+        <!-- <section class="book">
             <p class="edition">1st Edition</p>
             <h2 class="title">The University of Ibadan Press Material for 2024</h2>
             <p class="page">763 pages</p>
@@ -121,7 +121,7 @@
                     </svg>
                 </button>
             </div>
-        </section>
+        </section> -->
     </main>
     <section class="empty" data-visible="false">
         <div class="column">
@@ -141,11 +141,11 @@
         </div>
     </section>
     <dialog id="formDialog">
-        <form class="form column" action="">
+        <form class="form column" id="bookForm" action="">
             <div class="bar">
                 <img src="./assets/thelibrary.svg" alt="">
                 <h2>Add New Book</h2>
-                <button class="close">
+                <button class="close" id="close-btn">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <mask id="mask0_229_600" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0"
                             width="20" height="20">
@@ -159,17 +159,17 @@
                     </svg>
                 </button>
             </div>
-            <input type="text" placeholder="Name of your book" name="book_name">
-            <input type="text" placeholder="What's the Book's Author" name="book_author">
-            <input type="number" placeholder="Year the Book was published" name="book_year">
-            <input type="number" placeholder="How many pages" name="book_pages">
-            <input type="text" placeholder="Book's Edition" name="book_edition">
-            <select name="book_read" id="">
+            <input type="text" placeholder="Name of your book" name="book_name" required>
+            <input type="text" placeholder="What's the Book's Author" name="book_author" required>
+            <input type="number" placeholder="Year the Book was published" name="book_year" required>
+            <input type="number" placeholder="How many pages" name="book_pages" required>
+            <input type="text" placeholder="Book's Edition" name="book_edition" required>
+            <select name="book_read" id="" required>
                 <option value="" disabled selected>Have you read it</option>
                 <option value="true">True</option>
                 <option value="false">False</option>
             </select>
-            <button class="btn fixed reversed" id="close-btn">
+            <button type="submit" class="btn fixed reversed" id="submit-btn">
                 <svg class="btn-svg" width="21" height="20" viewBox="0 0 21 20" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <mask id="mask0_225_1396" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="21"
