Add Library Render and Random Colorizer

--- a/index.html
+++ b/index.html
@@ -40,15 +40,20 @@
         </article>
         <!-- <section class="book">
             <p class="edition">1st Edition</p>
+
             <h2 class="title">The University of Ibadan Press Material for 2024</h2>
+
             <p class="page">763 pages</p>
+
             <div class="bar">
-                <p class="year">University of Ibadan</p>
-                <p>2025</p>
+                <p class="author">University of Ibadan</p>
+                <p class="year">2025</p>
             </div>
+
             <svg class="icon" width="21" height="32" viewBox="0 0 21 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 0H21V32L11 26.5L0 32V0Z" fill="#272727" />
             </svg>
+
             <div class="delete">
                 <span class="text">Delete</span>
                 <button class="close">
@@ -65,8 +70,8 @@
                     </svg>
                 </button>
             </div>
-        </section>
-        <section class="book" data-color="blue">
+        </section> -->
+        <!-- <section class="book" data-color="blue">
             <p class="edition">1st Edition</p>
             <h2 class="title">The University of Ibadan Press Material for 2024 - Engineering and Chemistry</h2>
             <p class="page">763 pages</p>
