Add more functionalities
- make book shadow change on hover
- add dblclick operation on the book to change read status
- add Favico and OG Image

--- a/index.html
+++ b/index.html
@@ -4,10 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <!-- HTML Meta Tags -->
     <title>theLibrary - Local Persistent Library</title>
+    <meta name="description"
+        content="The Offline library for you, everyday, everything, always. Available persistently.">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://olxrunfxmi.github.io/library/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="theLibrary - Local Persistent Library">
+    <meta property="og:description"
+        content="The Offline library for you, everyday, everything, always. Available persistently.">
+    <meta property="og:image" content="https://ik.imagekit.io/ndtwmeq4p/theLibrary-OG.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="olxrunfxmi.github.io">
+    <meta property="twitter:url" content="https://olxrunfxmi.github.io/library/">
+    <meta name="twitter:title" content="theLibrary - Local Persistent Library">
+    <meta name="twitter:description"
+        content="The Offline library for you, everyday, everything, always. Available persistently.">
+    <meta name="twitter:image" content="https://ik.imagekit.io/ndtwmeq4p/theLibrary-OG.png">
+
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
     <link
         href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
