--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <!-- HTML Meta Tags -->
     <title>theLibrary - Local Persistent Library</title>
     <meta name="description"
-        content="The Offline library for you, everyday, everything, always. Available persistently.">
+        content="The Offline library for you, everyday, everytime, always. Available persistently.">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://olxrunfxmi.github.io/library/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="theLibrary - Local Persistent Library">
     <meta property="og:description"
-        content="The Offline library for you, everyday, everything, always. Available persistently.">
+        content="The Offline library for you, everyday, everytime, always. Available persistently.">
     <meta property="og:image" content="https://ik.imagekit.io/ndtwmeq4p/theLibrary-OG.png">
 
     <!-- Twitter Meta Tags -->
@@ -25,7 +25,7 @@
     <meta property="twitter:url" content="https://olxrunfxmi.github.io/library/">
     <meta name="twitter:title" content="theLibrary - Local Persistent Library">
     <meta name="twitter:description"
-        content="The Offline library for you, everyday, everything, always. Available persistently.">
+        content="The Offline library for you, everyday, everytime, always. Available persistently.">
     <meta name="twitter:image" content="https://ik.imagekit.io/ndtwmeq4p/theLibrary-OG.png">
 
     <link rel="stylesheet" href="index.css">
